docs/7.52/md/abennews-640-others.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Releases 6.xx](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-6.htm) →  [Changes in Release 6.40](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-640.htm) → 

Further Changes in Release 6.40

[1\. VALUE addition for all DATA statements](#!ABAP_MODIFICATION_1@1@)
[
2\. LEAVE TO CURRENT TRANSACTION](#!ABAP_MODIFICATION_2@2@)
[
3\. INTO addition for the CLEANUP statement](#!ABAP_MODIFICATION_3@3@)
[
4\. IF FOUND addition for the INCLUDE statement](#!ABAP_MODIFICATION_4@4@)
[
5\. Data compression with GZIP](#!ABAP_MODIFICATION_5@5@)
[
6\. Random number generator](#!ABAP_MODIFICATION_6@6@)
[
7\. New method in CL\_SYSTEM\_TRANSACTION\_STATE](#!ABAP_MODIFICATION_7@7@)
[
8\. Variant MESSAGE oref for messages](#!ABAP_MODIFICATION_8@8@)
[
9\. Behavior of error messages after LOAD-OF-PROGRAM](#!ABAP_MODIFICATION_9@9@)
[
10\. Revision of ABAP keyword documentation](#!ABAP_MODIFICATION_10@10@)

Modification 1

VALUE addition for all DATA statements

The VALUE can now be used in all variants of the [DATA](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata.htm) statement and in all related statements, like [CONSTANTS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapconstants.htm). Previously, the addition could not be used when creating bound table types. It is now also possible to create constants with bound table types.

Modification 2

LEAVE TO CURRENT TRANSACTION

If the new addition CURRENT TRANSACTION is specified after [LEAVE TO TRANSACTION,](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapleave_to_transaction.htm) the current [transaction](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentransaction_glosry.htm "Glossary Entry") is called using the transaction code used to call CALL TRANSACTION or LEAVE TO TRANSACTION. Except in the case of a [parameter transaction](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenparameter_transaction_glosry.htm "Glossary Entry") or [variant transactions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenvariant_transaction_glosry.htm "Glossary Entry"), this is the same transaction code as in the sy-tcode system field. For parameter or variant transactions it is their transaction code, while sy-tcode contains the name of the implicitly called [dialog transaction](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendialog_transaction_glosry.htm "Glossary Entry"). The transaction code for the current transaction can also be obtained using the new static method GET\_CURRENT\_TRANSACTION of class CL\_DYNPRO.

Note

This change was also transported to Release 6.20.

Modification 3

INTO addition for the CLEANUP statement

With the new addition INTO for statement [CLEANUP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcleanup.htm), a reference is made to the exception object in the specified reference variable.

Note

This change was also transported to Release 6.20.

Modification 4

IF FOUND addition for the INCLUDEstatement

The new addition IF FOUND can be used to prevent syntax errors in the [INCLUDE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinclude_prog.htm) statement if the specified program cannot be found.

Modification 5

Data compression with GZIP

System classes with methods for compressing character chains and byte chains with GZIP were introduced (see [classes for compressing data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_gzip.htm)).

Note

This change was also transported to Release 6.20.

Modification 6

Random number generator

System classes for creating pseudo random numbers were introduced (see [classes for mathematical operations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_math.htm)).

Modification 7

New method in CL\_SYSTEM\_TRANSACTION\_STATE

In class CL\_SYSTEM\_TRANSACTION\_STATE there is a new method GET\_SAP\_LUW\_KEY for determining the update key.

Modification 8

Variant MESSAGE oref for messages

If the variant [MESSAGE oref](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmessage_msg.htm) is used, only one object reference variable can be specified whose dynamic type implements the system interface IF\_T100\_MESSAGE for oref. The attributes of the interface identify the message to be sent in table T100. The use of classes (introduced in Release 6.20) that only implement the interface IF\_MESSAGE is obsolete and only allowed for compatibility reasons.

Modification 9

Behavior of error messages at LOAD-OF-PROGRAM

As of Release 6.40, a program is terminated with the runtime error SYSTEM\_LOAD\_OF\_PROGRAM\_FAILED if the event block for LOAD-OF-PROGRAM contains an [error message](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenerror_message_glosry.htm "Glossary Entry"). Before release 6.40, the system behaved according to the context where the program was loaded.

Modification 10

Revision of ABAP keyword documentation

The ABAP keyword documentation has been completely revised. An alphabetic [short reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_shortref.htm), an [ABAP glossary](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_glossary.htm) and an alphabetic [ABAP index](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_index.htm) have been added. F1 Help in ABAP Editor and Screen Painter analyzes the index and the glossary.

The color code in the hyperlinks has been changed as follows:

-   [Link](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) in the keyword documentation
    
-   [Link](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_glosry.htm "Glossary Entry") to a glossary entry
    
-   Linkto a program in the current AS ABAP.